--- a/conf/application.conf
+++ b/conf/application.conf
@@ -350,4 +350,9 @@ db {
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
+
+  default.url="jdbc:mysql://localhost/weather"
+  default.driver=com.mysql.jdbc.Driver
+  default.username=dev
+  default.password="dev"
 }
