--- a/conf/application.conf
+++ b/conf/application.conf
@@ -350,9 +350,9 @@ db {
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
-
-  default.url="jdbc:mysql://localhost/weather"
-  default.driver=com.mysql.jdbc.Driver
-  default.username=dev
-  default.password="dev"
 }
+slick.dbs.default.driver="slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
+slick.dbs.default.db.url="jdbc:mysql://localhost/weather"
+slick.dbs.default.db.username=dev
+slick.dbs.default.db.password="dev"
