--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,6 +15,13 @@
 # HOCON will fall back to substituting environment variable:
 #mykey = ${JAVA_HOME}
 
+
+slick.dbs.default.driver="slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
+slick.dbs.default.db.url="jdbc:mysql://localhost/weather"
+slick.dbs.default.db.user="dev"
+slick.dbs.default.db.password="dev"
+
 ## Akka
 # https://www.playframework.com/documentation/latest/ScalaAkka#Configuration
 # https://www.playframework.com/documentation/latest/JavaAkka#Configuration
@@ -67,9 +74,9 @@ play.modules {
 # https://www.playframework.com/documentation/latest/IDE
 # ~~~~~
 # Depending on your IDE, you can add a hyperlink for errors that will jump you
-# directly to the code location in the IDE in dev mode. The following line makes 
-# use of the IntelliJ IDEA REST interface: 
-#play.editor=http://localhost:63342/api/file/?file=%s&line=%s 
+# directly to the code location in the IDE in dev mode. The following line makes
+# use of the IntelliJ IDEA REST interface:
+#play.editor=http://localhost:63342/api/file/?file=%s&line=%s
 
 ## Internationalisation
 # https://www.playframework.com/documentation/latest/JavaI18N
@@ -351,8 +358,3 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
-slick.dbs.default.driver="slick.driver.MySQLDriver$"
-slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
-slick.dbs.default.db.url="jdbc:mysql://localhost/weather"
-slick.dbs.default.db.username=dev
-slick.dbs.default.db.password="dev"
