--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,7 +21,7 @@ slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
 slick.dbs.default.db.url="jdbc:mysql://localhost/weather"
 slick.dbs.default.db.user="dev"
 slick.dbs.default.db.password="dev"
-
+play.evolutions.enabled=true
 ## Akka
 # https://www.playframework.com/documentation/latest/ScalaAkka#Configuration
 # https://www.playframework.com/documentation/latest/JavaAkka#Configuration
