--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,50 +23,100 @@ play.http.errorHandler = "utils.ErrorHandler"
 # Mailer
 # ~~~~~
 
-play.mailer {
-  # SMTP serveur, example : smtp.gmail.com
-  host=smtp.gmail.com
+# Authenticator settings
+authenticator.cookieName="authenticator"
+authenticator.cookiePath="/"
+authenticator.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
+authenticator.httpOnlyCookie=true
+authenticator.useFingerprinting=true
+authenticator.authenticatorIdleTimeout=30 minutes
+authenticator.authenticatorExpiry=12 hours
 
-  # Mail Port, example : 465, 587 or 25
-  port=465
+authenticator.rememberMe.cookieMaxAge=30 days
+authenticator.rememberMe.authenticatorIdleTimeout=5 days
+authenticator.rememberMe.authenticatorExpiry=30 days
 
-  # Mail Auth User, example : user@gmail.com
-  user="your@gmail.com"
+# OAuth1 token secret provider settings
+oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
+oauth1TokenSecretProvider.cookiePath="/"
+oauth1TokenSecretProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
+oauth1TokenSecretProvider.httpOnlyCookie=true
+oauth1TokenSecretProvider.expirationTime=5 minutes
 
-  # Mail Auth Password
-  password=yourpassword
+# OAuth2 state provider settings
+oauth2StateProvider.cookieName="OAuth2State"
+oauth2StateProvider.cookiePath="/"
+oauth2StateProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
+oauth2StateProvider.httpOnlyCookie=true
+oauth2StateProvider.expirationTime=5 minutes
 
-  # Mail SSL : true or false
-  ssl=true
+# Facebook provider
+facebook.authorizationURL="https://graph.facebook.com/v2.3/oauth/authorize"
+facebook.accessTokenURL="https://graph.facebook.com/v2.3/oauth/access_token"
+facebook.redirectURL="http://localhost:9000/authenticate/facebook"
+facebook.clientID=""
+facebook.clientID=${?FACEBOOK_CLIENT_ID}
+facebook.clientSecret=""
+facebook.clientSecret=${?FACEBOOK_CLIENT_SECRET}
+facebook.scope="email"
 
-  # Will only log all the email properties instead of sending an email
-  mock=true
+# Google provider
+google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
+google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
+google.redirectURL="http://localhost:9000/authenticate/google"
+google.clientID=""
+google.clientID=${?GOOGLE_CLIENT_ID}
+google.clientSecret=""
+google.clientSecret=${?GOOGLE_CLIENT_SECRET}
+google.scope="profile email"
 
-  # Mail user from
-  from="your@gmail.com"
+# VK provider
+vk.authorizationURL="http://oauth.vk.com/authorize"
+vk.accessTokenURL="https://oauth.vk.com/access_token"
+vk.redirectURL="http://localhost:9000/authenticate/vk"
+vk.clientID=""
+vk.clientID=${?VK_CLIENT_ID}
+vk.clientSecret=""
+vk.clientSecret=${?VK_CLIENT_SECRET}
+vk.scope="email"
+
+# Clef provider
+clef.accessTokenURL="https://clef.io/api/v1/authorize"
+clef.redirectURL="http://localhost:9000/authenticate/clef"
+clef.clientID=""
+clef.clientID=${?CLEF_CLIENT_ID}
+clef.clientSecret=""
+clef.clientSecret=${?CLEF_CLIENT_SECRET}
+
+# Twitter provider
+twitter.requestTokenURL="https://twitter.com/oauth/request_token"
+twitter.accessTokenURL="https://twitter.com/oauth/access_token"
+twitter.authorizationURL="https://twitter.com/oauth/authenticate"
+twitter.callbackURL="http://localhost:9000/authenticate/twitter"
+twitter.consumerKey=""
+twitter.consumerKey=${?TWITTER_CONSUMER_KEY}
+twitter.consumerSecret=""
+twitter.consumerSecret=${?TWITTER_CONSUMER_SECRET}
+
+# Xing provider
+xing.requestTokenURL="https://api.xing.com/v1/request_token"
+xing.accessTokenURL="https://api.xing.com/v1/access_token"
+xing.authorizationURL="https://api.xing.com/v1/authorize"
+xing.callbackURL="http://localhost:9000/authenticate/xing"
+xing.consumerKey=""
+xing.consumerKey=${?XING_CONSUMER_KEY}
+xing.consumerSecret=""
+xing.consumerSecret=${?XING_CONSUMER_SECRET}
+
+# Yahoo provider
+yahoo.providerURL="https://me.yahoo.com/"
+yahoo.callbackURL="http://localhost:9000/authenticate/yahoo"
+yahoo.axRequired={
+  "fullname": "http://axschema.org/namePerson",
+  "email": "http://axschema.org/contact/email",
+  "image": "http://axschema.org/media/image/default"
 }
-
-
-# Silhouette Authentication
-# ~~~~~
-
-silhouette {
-  authenticator {
-    cookieName="id"
-    cookiePath="/"
-    secureCookie=false # Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-    httpOnlyCookie=true
-    useFingerprinting=true
-    authenticatorIdleTimeout=1800 # 30 minutes in seconds
-    authenticatorExpiry=43200 # 12 hours in seconds
-
-    rememberMe {
-      cookieMaxAge=2592000 # 30 days in seconds
-      authenticatorIdleTimeout=432000 # 5 days in seconds
-      authenticatorExpiry=2592000 # 30 days in seconds
-    }
-  }
-}
+yahoo.realm="http://localhost:9000"
 
 slick.dbs.default.driver="slick.driver.MySQLDriver$"
 slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
