--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,13 +16,15 @@
 #mykey = ${JAVA_HOME}
 play.crypto.secret = "123"
 
-play.i18n.langs = ["en", "es"]
+play.i18n.langs = ["en"]
 
 play.http.errorHandler = "utils.ErrorHandler"
 
-play.modules.enabled += "modules.SilhouetteModule"
-
 play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
+
+play.modules.enabled += "modules.SilhouetteModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
 
 # Mailer
 # ~~~~~
