html 5 validation working on the form

--- a/public/bower.json
+++ b/public/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "Chart.js": "chartjs#^2.1.2"
+    "Chart.js": "chartjs#^2.1.2",
+    "jquery-validation": "^1.15.0"
   }
 }
