added lt translations

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,7 +16,7 @@
 #mykey = ${JAVA_HOME}
 play.crypto.secret = "123"
 
-play.i18n.langs = ["en"]
+play.i18n.langs = ["lt"]
 
 play.http.errorHandler = "utils.ErrorHandler"
 
