--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,6 +28,25 @@ play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorH
 
 # Mailer
 # ~~~~~
+play.mailer {
+  # SMTP serveur, example : smtp.gmail.com
+  host=smtp.gmail.com
+  # Mail Port, example : 465, 587 or 25
+  port=465
+  # Mail Auth User, example : user@gmail.com
+  user="your@gmail.com"
+  # Mail Auth Password
+  password=yourpassword
+  # Mail SSL : true or false
+  ssl=true
+  # Will only log all the email properties instead of sending an email
+  mock=true
+  # Mail user from
+  from="your@gmail.com"
+}
+
+
+
 slick.dbs.default.driver="slick.driver.MySQLDriver$"
 slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
 slick.dbs.default.db.url="jdbc:mysql://localhost/weather"
